# AudioEffects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_plugin.py  create_template.py  delete_plugin.py  plugin_helper.py
3BandEqualizer/: 3BandEqualizer.jucer  CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
3BandEqualizer/Source/: PluginProcessor.h
Arpeggiator/: Arpeggiator.jucer
Arpeggiator/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
AudioPlayer/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
AudioPlayerPlugin/: AudioPlayerPlugin.jucer  CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
AudioPlayerPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Chorus/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
Common/: PluginParameter.h  PluginParameterComboBox.h  PluginParameterCombox.h  PluginParameterSlider.h  PluginParameterToggle.h  Utils.cpp  Utils.h
Delay/: CMakeLists.txt  Delay.jucer  PluginProcessor.cpp  PluginProcessor.h
Delay/Source/: PluginProcessor.cpp  PluginProcessor.h
Distortion/: CMakeLists.txt  Distortion.jucer  PluginProcessor.cpp  PluginProcessor.h
Distortion/Source/: PluginProcessor.h
Filter/: CMakeLists.txt  Filter.jucer  PluginProcessor.cpp  PluginProcessor.h
Filter/Source/: PluginProcessor.cpp  PluginProcessor.h
Flanger/: CMakeLists.txt  Flanger.jucer  PluginProcessor.cpp  PluginProcessor.h
Flanger/Source/: PluginProcessor.cpp  PluginProcessor.h
Gain/: Gain.jucer
Gain/Source/: PluginProcessor.cpp  PluginProcessor.h
Host/: CMakeLinkLibraries.cmake  CMakeLists.txt  GraphEditorPanel.cpp  GraphEditorPanel.h  HostPluginListComponent.h  HostPluginListWindow.h  HostPluginScanner.h  HostWindow.cpp  HostWindow.h  IOConfigWindow.cpp  IOConfigWindow.h  IOConfigurationWindow.cpp  MainHostWindow.cpp  MainHostWindow.h  PluginGraph.cpp  PluginGraph.h  PluginInstanceFactoryCreation.inl  PluginInstanceFormat.cpp  PluginInstanceFormat.h  PluginInstanceIncludedHeader.inl  PluginInstanceProxy.h  PluginWindow.h  main.cpp
NoiseGate/: CMakeLists.txt  NoiseGate.jucer  PluginProcessor.cpp  PluginProcessor.h
NoiseGate/Source/: PluginProcessor.cpp
Oscillator/: CMakeLists.txt  Oscillator.jucer  PluginProcessor.cpp  PluginProcessor.h
Oscillator/Source/: PluginProcessor.cpp  PluginProcessor.h
PingPongDelay/: CMakeLists.txt  PingPongDelay.jucer  PluginProcessor.cpp  PluginProcessor.h
PingPongDelay/Source/: PluginProcessor.cpp  PluginProcessor.h
PluginHost/: GraphEditorPanel.cpp  GraphEditorPanel.h  HostWindow.cpp  HostWindow.h  IOConfigWindow.cpp  IOConfigWindow.h  PluginGraph.cpp  PluginGraph.h  PluginInstanceFormat.cpp  PluginInstanceFormat.h  PluginInstanceProxy.h  PluginWindow.h  main.cpp
PluginTestHost/: CMakeLists.txt  GraphEditorPanel.cpp  GraphEditorPanel.h  HostWindow.cpp  HostWindow.h  IOConfigWindow.cpp  IOConfigWindow.h  InternalPlugin.h  InternalPluginFormat.cpp  InternalPluginFormat.h  InternalPlugins.cpp  MainHostWindow.cpp  MainHostWindow.h  PluginGraph.cpp  PluginGraph.h  PluginHostApp.cpp  PluginWindow.h  main.cpp
Reverb/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  Reverb.jucer
Reverb/Source/: PluginProcessor.cpp
SimpleDistortion/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  SimpleDistortion.jucer
SimpleDistortion/Source/: PluginProcessor.h
SimpleEQ/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  SimpleEQ.jucer
ThreeBandEqualizer/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
WhiteNoise/: WhiteNoise.jucer
WhiteNoise/Source/: PluginProcessor.cpp  PluginProcessor.h
